services/db-service/tests/requests/snapshots/can_delete_content@contents_request.snap
---
source: tests/requests/contents.rs
expression: "(delete_content_request.status_code(), delete_content_request.text())"
---
(
    200,
    "",
)
