services/db-service/tests/requests/snapshots/can_list@contents_request.snap
---
source: tests/requests/contents.rs
expression: "(res.status_code(), res.text())"
---
(
    200,
    "[{\"created_at\":\"2023-11-12T12:34:56.789Z\",\"updated_at\":\"2023-11-12T12:34:56.789Z\",\"id\":1,\"pid\":\"b9147c82-f6ac-48a4-8c0a-5d45bc035e76\",\"title\":\"Lorem reptinos\",\"url\":\"https://example.com\",\"content_type\":\"WebArticle\",\"image_url\":\"https://picsum.photos/200\",\"description\":\"This is a simple description.\",\"raw_content\":\"This is raw data.\",\"summary\":\"This is the summary.\",\"metadata\":{\"json\":\"abc\"}},{\"created_at\":\"2023-11-13T12:00:00Z\",\"updated_at\":\"2023-11-13T12:00:00Z\",\"id\":2,\"pid\":\"aaaa57aa-8af4-46a8-856a-29deebdcd222\",\"title\":\"Another Content\",\"url\":\"https://example.com/article2\",\"content_type\":\"YoutubeVideo\",\"image_url\":\"https://picsum.photos/201\",\"description\":\"Another description.\",\"raw_content\":\"This is another raw data.\",\"summary\":\"Another summary.\",\"metadata\":{\"json\":\"xyz\"}}]",
)
