services/db-service/tests/requests/snapshots/check_url_not_exists@contents_request.snap
---
source: tests/requests/contents.rs
expression: "(update_content_request.status_code(), update_content_request.text())"
---
(
    200,
    "{\"exists\":false,\"url\":\"https://exmple111.com\"}",
)
