services/db-service/tests/requests/snapshots/get_contents_with_size_and_page@contents_request.snap
---
source: tests/requests/contents.rs
expression: "(contents.status_code(), contents.text())"
---
(
    200,
    "[{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"pid\":\"b9147c82-f6ac-48a4-8c0a-5d45bc035e76\",\"title\":\"Lorem reptinos\",\"url\":\"https://example.com\",\"content_type\":\"WebArticle\",\"image_url\":\"https://picsum.photos/200\",\"description\":\"This is a simple description.\",\"raw_content\":\"This is raw data.\",\"summary\":\"This is the summary.\",\"metadata\":{\"json\":\"abc\"}},{\"created_at\":\"DATEZ\",\"updated_at\":\"DATEZ\",\"id\":ID,\"pid\":\"aaaa57aa-8af4-46a8-856a-29deebdcd222\",\"title\":\"Another Content\",\"url\":\"https://example.com/article2\",\"content_type\":\"YoutubeVideo\",\"image_url\":\"https://picsum.photos/201\",\"description\":\"Another description.\",\"raw_content\":\"This is another raw data.\",\"summary\":\"Another summary.\",\"metadata\":{\"json\":\"xyz\"}}]",
)
